# dnszone

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST  README.md  README.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
dnszone/: __init__.py  dnszone.py  version.py  zone_check.py  zone_reload.py
easyzone/: __init__.py  easyzone.py  zone_check.py  zone_reload.py
tests/: dnszone_test.py  easyzone_test.py  test_zone_check.py  test_zone_reload.py
tests/files/: example.com
