[metadata]
name = dnszone
description = Fork of Easy Zone - DNS Zone abstraction module
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/greg-hellings/dnszone
author = Greg Hellings
author_email = greg.hellings@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Internet :: Name Service (DNS)
    Topic :: System :: Systems Administration
project_urls =
    Source = https://github.com/greg-hellings/dnszone
    Tracker = https://github.com/greg-hellings/dnszon/issues

[options]
zip_safe = True
packages = dnszone
platforms = any
include_package_data = True
install_requires =
    dnspython<2
    six
python_requires = >=2.7
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1
